Update default API endpoint to openaiqc.gep.com

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="config-item span-full">
                     <label for="apiEndpoint">API Endpoint URL</label>
                     <input type="text" id="apiEndpoint" 
-                           value="https://135.237.31.202/platform2/openai/deployments/gpt-5.2/chat/completions"
+                           value="https://openaiqc.gep.com/platform2/openai/deployments/gpt-5.2/chat/completions"
                            placeholder="https://api.openai.com/v1/chat/completions">
                 </div>
                 
